--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.reservation.MyReservationFragment">
+    tools:context=".ui.boards.TasksFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="fragment_my_reservation.xml" />
+        android:text="fragment_tasks.xml" />
 
 </FrameLayout>
