--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,29 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_boards">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.example.myapplication.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/nav_boards"
+        android:name="com.example.myapplication.ui.boards.BoardsFragment"
+        android:label="Boards"
+        tools:layout="@layout/fragment_boards" />
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_reservation"
         android:name="com.example.myapplication.ui.reservation.ReservationFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:label="Reservations"
+        tools:layout="@layout/fragment_reservation" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_notification"
+        android:name="com.example.myapplication.ui.notification.NotificationFragment"
+        android:label="Notifications"
+        tools:layout="@layout/fragment_notification" />
 
     <fragment
         android:id="@+id/nav_settings"
-        android:name="com.example.myapplication.ui.settings.fragment_settings"
+        android:name="com.example.myapplication.ui.settings.SettingsFragment"
         android:label="Settings"
         tools:layout="@layout/fragment_settings" />
 </navigation>
