--- a/app/src/main/res/layout/fragment_my_reservation_building1.xml
+++ b/app/src/main/res/layout/fragment_my_reservation_building1.xml
@@ -5,15 +5,16 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.reservation.ReservationBuilding1Fragment">
+    tools:context=".ui.reservation.MyReservationFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="120dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="120dp">
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="80dp"
+        android:orientation="vertical">
 
 
         <TextView
