update - activityfile + fragments + name changes of files for RESERVATION

--- a/app/src/main/res/layout/activity_myreservation.xml
+++ b/app/src/main/res/layout/activity_myreservation.xml
@@ -24,9 +24,15 @@
             android:id="@+id/Building1_start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/reservation_building_floor"
-            android:text="@string/main_building_xxx"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"/>
+            android:background="@drawable/reservation_building_floor"
+            android:text="@string/main_building_xxx" />
+
+        <fragment
+            android:id="@+id/fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
