--- a/app/src/main/res/layout/fragment_boards.xml
+++ b/app/src/main/res/layout/fragment_boards.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".ui.reservation.Building1Fragment">
+    tools:context=".ui.reservation.NewReservationBuilding1Fragment">
 
     <TextView
         android:id="@+id/textView2"
