--- a/app/src/main/res/layout/fragment_my_reservation.xml
+++ b/app/src/main/res/layout/fragment_my_reservation.xml
@@ -17,6 +17,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
+
+    <ImageButton
+        android:id="@+id/Building1_Floor4"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/reservation_building_floor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.196" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
