--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ui.reservation.ReservationActivity">
 
+    <FrameLayout
+        android:id="@+id/ReservationFragment"
+        android:layout_width="354dp"
+        android:layout_height="606dp"
+        android:layout_marginStart="28dp"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.416" />
 </androidx.constraintlayout.widget.ConstraintLayout>
