--- a/app/src/main/res/layout/fragment_new_reservation.xml
+++ b/app/src/main/res/layout/fragment_new_reservation.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"/>
-    <androidx.fragment.app.FragmentContainerView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -37,5 +37,5 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-    </androidx.fragment.app.FragmentContainerView>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
